--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100vh;
 }
 
@@ -24,7 +23,7 @@ input[type="text"] {
 }
 
 button {
-    width: 8%;
+    width: 50px;
     font-size: 16px;
     background-color: #f2f2f2;
     color: #000000;
@@ -37,12 +36,12 @@ button:hover {
     background-color: #d3d3d3;
 }
 
-.search-container {
+.search_container {
     width: 100%;
     height: auto;
     display: flex;
     gap: 5px;
-    padding: 8px;
+    padding: 6px;
     border: 2px solid #199201;
     border-radius: 8px;
     background-color: #f2f2f2;
@@ -53,18 +52,15 @@ button:hover {
     height: auto;
     display: flex;
     gap: 2px;
-    top: 10px;
     margin-bottom: 10px
 }
 
 .view {
-    margin-top: 30px;
-    width: 100%;
-    height: 100%;
+    margin-top: 90px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding-bottom: 10px;
 }
 
 .cabecalho {
@@ -103,8 +99,80 @@ button:hover {
 .table_content {
     width: 800px;
     height: 500px;
-    background-color: #19920170;
+    background-color: #19920150;
     border-radius: 10px;
     border: 1px solid #000000;
+    overflow-y: auto;
+}
+
+#mercadorias {
+    list-style: none;
+    padding: 0;
+}
+
+
+.mercadoria-item {
+    display: flex;
+    align-items: center;
+    position: relative;
+    border-radius: 16px;
+    background-color: #e2e2e2;
+    margin: 10px;
+    height: 40px;
+}
+
+.mercadoria-nome {
+    font-size: 14px;
+    margin-left: 6px;
+    flex: 1;
+}
+
+.mercadoria-valor {
+    font-size: 14px;
+    margin-right: 10px;
+    text-align: left;
+}
+
+.botao-editar {
+    margin-right: 6px;
+    width: 50px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    padding: 0;
+}
+
+.botao-editar:hover {
+    background-color: rgba(5, 158, 130, 0.18);
+}
+
+
+.icone-botao {
+    width: 20px;
+}
+
+@media (max-width: 820px) {
+    .table_content {
+        width: 90vw;
+        height: 500px;
+        background-color: #19920150;
+        border-radius: 10px;
+        border: 1px solid #000000;
+    }
+}
+
+@media (max-width: 820px) {
+    .search_add {
+        width: 90vw;
+        height: auto;
+        display: flex;
+        gap: 2px;
+        margin-bottom: 10px;
+    }
 }
 
