--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,10 @@
+html {
+    font-size: 12px;
+}
+
 body {
     font-family: Arial, sans-serif;
+    font-size: 1rem;
     background-color: #e2e2e2;
     display: flex;
     flex-direction: column;
@@ -8,14 +13,13 @@ body {
 }
 
 img {
-    width: 70px;
+    width: 6rem;
 }
 
 input[type="text"] {
     flex: 1;
     width: auto;
     border: none;
-    font-size: 12px;
     background-color: transparent;
     outline: none;
     box-shadow: none;
@@ -23,12 +27,12 @@ input[type="text"] {
 }
 
 button {
-    width: 50px;
-    font-size: 16px;
+    width: 4.1rem;
+    font-size: 1.4rem;
     background-color: #f2f2f2;
     color: #000000;
-    border: 2px solid #199201;
-    border-radius: 8px;
+    border: 0.2rem solid #199201;
+    border-radius: 0.7rem;
     cursor: pointer;
 }
 
@@ -40,51 +44,82 @@ button:hover {
     width: 100%;
     height: auto;
     display: flex;
-    gap: 5px;
-    padding: 6px;
-    border: 2px solid #199201;
-    border-radius: 8px;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    border: 0.2rem solid #199201;
+    border-radius: 0.7rem;
     background-color: #f2f2f2;
 }
 
 .search_add {
-    width: 700px;
+    width: 58rem;
     height: auto;
     display: flex;
-    gap: 2px;
-    margin-bottom: 10px
+    gap: 0.2rem;
+    margin-bottom: 0.8rem
 }
 
 .view {
-    margin-top: 90px;
+    margin-top: 7.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 10px;
 }
 
-.cabecalho {
+header {
     position: fixed;
     top: 0;
     left: 0;
-    height: 40px;
+    height: 3.4rem;
     width: 100%;
     background-color: #045700;
     color: #cfcfcf;
-    padding: 10px 20px;
+    padding: 0.8rem 1.7rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
 }
 
+footer {
+    width: 100%;
+    font-size: 0.8rem;
+    background-color: rgba(4, 87, 0, 0.75);
+    margin-top: 5rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    align-items: center;
+    text-align: center;
+}
+
+.img-footer {
+    margin-top: 1rem;
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+
+footer img {
+    width: 3rem;
+    height: 3rem;
+}
+
+
+footer img:hover {
+    transform: scale(1.1);
+}
+
 .lupa {
-    width: 16px;
+    width: 1.4rem;
 }
 
 .button_logout {
-    padding-right: 80px;
-    font-size: 12px;
+    padding-right: 6.7rem;
+    font-size: 1rem;
     background-color: transparent;
     color: #f2f2f2;
     border: none;
@@ -97,12 +132,10 @@ button:hover {
 }
 
 .table_content {
-    width: 800px;
-    height: 500px;
-    background-color: #19920150;
-    border-radius: 10px;
-    border: 1px solid #000000;
-    overflow-y: auto;
+    width: 66.7rem;
+    height: 41.7rem;
+    overflow-y: scroll;
+    border: 0.2rem solid #037a00;
 }
 
 #mercadorias {
@@ -115,34 +148,55 @@ button:hover {
     display: flex;
     align-items: center;
     position: relative;
-    border-radius: 16px;
-    background-color: #e2e2e2;
-    margin: 10px;
-    height: 40px;
+    border-bottom: 1px solid #000000;
+    margin: 0.4rem;
+    height: 2.6rem;
 }
 
+.content-header {
+    width: 100%;
+    font-size: 1.3rem;
+    padding: 0.7rem;
+    color: #eaeaea;
+    background-color: #037a00;
+    display: flex;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.nome {
+    margin-left: 0.6rem;
+}
+
+.valor {
+    margin-left: auto;
+    margin-right: 7.4rem;
+    text-align: right;
+}
+
+
 .mercadoria-nome {
-    font-size: 14px;
-    margin-left: 6px;
+    font-size: 1rem;
+    margin-left: 0.8rem;
     flex: 1;
 }
 
 .mercadoria-valor {
-    font-size: 14px;
-    margin-right: 10px;
+    font-size: 1rem;
+    margin-right: 0.8rem;
     text-align: left;
 }
 
 .botao-editar {
-    margin-right: 6px;
-    width: 50px;
-    height: 30px;
+    margin-right: 0.5rem;
+    width: 4.2rem;
+    height: 2.1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #f2f2f2;
     border: none;
-    border-radius: 12px;
+    border-radius: 1rem;
     cursor: pointer;
     padding: 0;
 }
@@ -153,26 +207,22 @@ button:hover {
 
 
 .icone-botao {
-    width: 20px;
+    width: 1.7rem;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 60rem) {
     .table_content {
         width: 90vw;
-        height: 500px;
-        background-color: #19920150;
-        border-radius: 10px;
-        border: 1px solid #000000;
     }
 }
 
-@media (max-width: 820px) {
+@media (max-width: 60rem) {
     .search_add {
         width: 90vw;
         height: auto;
         display: flex;
-        gap: 2px;
-        margin-bottom: 10px;
+        gap: 0.2rem;
+        margin-bottom: 0.8rem;
     }
 }
 
