--- a/styles/home.css
+++ b/styles/home.css
@@ -10,6 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 img {
@@ -170,7 +171,7 @@ footer img:hover {
 
 .valor {
     margin-left: auto;
-    margin-right: 7.4rem;
+    margin-right: 6rem;
     text-align: right;
 }
 
@@ -226,3 +227,97 @@ footer img:hover {
     }
 }
 
+.add-namevalue {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-bottom: 0.8rem;
+}
+
+.add-namevalue label {
+    font-size: 1.2rem;
+    margin-right: 0.1rem;
+    color: #393939;
+}
+
+.add-namevalue input[type="number"] {
+    width: 5rem;
+    height: 1.2rem;
+    padding: 0.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-radius: 0.4rem;
+    background-color: transparent;
+    outline: none;
+    box-shadow: none;
+    caret-color: black;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+.add-namevalue input[type="text"] {
+    width: 100%;
+    height: 1.2rem;
+    padding: 0.5rem;
+    margin-right: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-radius: 0.4rem;
+    background-color: transparent;
+    caret-color: black;
+}
+
+.add-descricao textarea{
+    width: 96%;
+    height: 4rem;
+    padding: 0.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-radius: 0.4rem;
+    outline: none;
+    margin-bottom: 1.5rem;
+}
+
+.fechar-modal {
+    background-color: #dc0606;
+    width: 7.5rem;
+    color: white;
+    border: none;
+    padding: 0.6rem 1.2rem;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    display: block;
+
+}
+
+.fechar-modal:hover{
+    background-color: #ba0c0c;
+}
+
+.botao-adicionar {
+    background-color: #199201;
+    width: 7.5rem;
+    color: white;
+    border: none;
+    padding: 0.6rem 1.2rem;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    display: block;
+    margin-left: auto;
+}
+
+.botao-adicionar:hover {
+    background-color: #157a01;
+}
+
+.add-butons {
+    display: flex;
+    gap: 0.5rem;
+}
