--- a/styles/home.css
+++ b/styles/home.css
@@ -321,3 +321,18 @@ input[type="number"] {
     display: flex;
     gap: 0.5rem;
 }
+
+.botao-deletar {
+    margin-right: 1rem;
+    margin-bottom: 0.4rem;
+    width: 2.2rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    margin-left: auto;
+}
+
+.botao-deletar:hover {
+    background-color: transparent;
+}
