--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,8 @@
 html {
     font-size: 12px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -9,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     overflow-x: hidden;
 }
 
@@ -65,6 +68,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 
 header {
@@ -86,7 +90,7 @@ footer {
     width: 100%;
     font-size: 0.8rem;
     background-color: rgba(4, 87, 0, 0.75);
-    margin-top: 5rem;
+    margin-top: 2rem;
     padding: 3rem;
     display: flex;
     flex-direction: column;
